# genai-test-case-agent

./: README.md
jira-mcp-server/: .env  README.md  config.json  main.py  pyproject.toml  requirements.txt  server-sdk.py  server.py
jira-test-case-agent-app/: manifest.yml  package-lock.json  package.json
jira-test-case-agent-app/src/frontend/: app.jsx  index.jsx
jira-test-case-agent-app/src/resolvers/: index.js
test-case-agent/: .gitignore  README.md  requirements.txt  setup.py
test-case-agent-app/: .env  main.py  pyproject.toml  requirements.txt  setup.py
test-case-agent-app/src/api/: app.py  test_app.py
test-case-agent-app/src/api/models/: jira.py  jira_story.py
test-case-agent-app/src/config/: settings.py
test-case-agent-app/src/core/agent/: test_case_agent.py
test-case-agent-app/src/core/llm/: chat_groq_llm.py  chat_ollama_llm.py  chat_openai_llm.py
test-case-agent-app/src/core/pipeline/: pipeline.py
test-case-agent-app/src/core/prompts/: prompt_manager.py
test-case-agent-app/src/models/: jira_story.py
test-case-agent-app/src/web/: app.py
test-case-agent-jira-app/: README.md  manifest.yml  package-lock.json  package.json
test-case-agent-jira-app/src/frontend/: app.jsx
test-case-agent-jira-app/src/handlers/: getTestCases.js
test-case-agent-jira-app/src/models/: JiraStory.ts
test-case-agent-jira-app/src/resolvers/: index.js
test-case-agent-jira-app/static/ui/: package.json
test-case-agent-jira-custom-app/: README.md  manifest.yml
test-case-agent-jira-custom-app/src/: index.js
test-case-agent-jira-custom-app/src/handlers/: generateTestCases.js  getJiraIssue.js  getTestCases.js  streamTestCases.js
test-case-agent-web-app/: README.md  main.py  pyproject.toml  requirements.txt  setup.py
test-case-agent-web-app/src/: app.py
test-case-agent-web-app/src/config/: settings.py
test-case-agent/src/: app.py
(+24 files in other folders)
