[project]
name = "test-case-agent-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.60",
    "langchain-groq>=0.3.2",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.17",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.4.5",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.2",
]
