[project]
name = "test-case-agent-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "langchain>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-groq==0.3.2",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-mcp-tools==0.2.4",
    "langchain-ollama>=0.3.3",
    "langchain-openai==0.3.17",
    "langchain-text-splitters>=0.3,<0.4",
    "langgraph>=0.2.20,<0.3",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "setuptools>=80.8.0",
    "streamlit>=1.32.2",
    "uvicorn>=0.27.1",
]
